fix bookmark-icon issue

--- a/components/form-page/form.css
+++ b/components/form-page/form.css
@@ -13,7 +13,7 @@ form {
   flex-direction: column;
 }
 
-button {
+.submit-button {
   background: var(--secondary);
   color: var(--white);
   border: none;
