--- a/components/form-page/form.css
+++ b/components/form-page/form.css
@@ -1,5 +1,5 @@
 form {
-  padding: 8rem 2rem 4rem 2rem;
+  padding: 8rem 2rem 6rem 2rem;
   max-width: 45rem;
   margin: 0 auto;
   display: flex;
@@ -11,6 +11,10 @@ form {
 .formfield {
   display: flex;
   flex-direction: column;
+}
+
+.formfield p {
+  align-self: flex-end;
 }
 
 .submit-button {
